Fixed overflow of the jumbotron textbox

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -183,8 +183,8 @@ button:disabled {
   .jumbotron__text-box {
     position: absolute;
     top: 45%;
-    left: 60%;
-    width: 100%;
+    left: 50%;
+    width: 70%;
     transform: translate(-50%, -50%); }
 
 .heading-primary {
