--- a/styles/components/_jumbotron.scss
+++ b/styles/components/_jumbotron.scss
@@ -10,8 +10,8 @@
   &__text-box {
     position: absolute;
     top: 45%;
-    left: 60%;
-    width: 100%;
+    left: 50%;
+    width: 70%;
     transform: translate(-50%, -50%);
   }
 }
